<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      tools:context="com.hikvision.open.app.PreviewActivity"
      >

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/black"
        >

      <TextureView
          android:id="@+id/texture_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          />

      <ProgressBar
          android:id="@+id/progress_bar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:visibility="gone"
          />

      <TextView
          android:id="@+id/result_hint_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:textColor="@android:color/white"
          android:visibility="gone"
          />

    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_layout"
        android:layout_marginTop="10dp"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/review_uri_edit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hk_please_input_voicetalk_uri"
          android:inputType="textUri"
          android:text="http://39.106.203.192/Util/hikvision/getCameraTalkUrl.ht"
          />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout"
        android:text="@string/hk_start_talk"
        />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout"
        android:layout_toRightOf="@id/start"
        android:text="@string/hk_stop_talk"
        />

  </RelativeLayout>

</ScrollView>

